nginx/nginx-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginxweb-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-basicauth@kubernetescrd
    
spec:
  rules:
    - host: nginxweb.sillycat.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: nginx
              servicePort: 80
