nginx/nginx-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginxweb-route
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`nginxweb.sillycat.net`)
    kind: Rule
    services:
      - name: nginx
        port: 80
